[project]
name = "certbot-standalone-nfq"
version = "0.1.0"
description = "Certbot HTTP authenticator that works with any web server."
authors = [{name = "Alex Zorin", email = "alex@zorin.au"}]
requires-python = ">=3.7"

[project.urls]
repository = "https://github.com/alexzorin/certbot-standalone-nfq"

[project.entry-points."certbot.plugins"]
standalone-nfq = "certbot_standalone_nfq.auth:Authenticator"

[tool.black]
line-length = 100
target-version = ['py37']

[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"