[project]
dynamic = ["version", "dependencies"]
name = "certbot-standalone-nfq"
description = "Certbot HTTP authenticator that works with any web server."
readme = "README.md"
authors = [{name = "Alex Zorin", email = "alex@zorin.au"}]
requires-python = ">=3.8"
license = { text = "GPL-2.0" }

[project.urls]
repository = "https://github.com/alexzorin/certbot-standalone-nfq"

[project.entry-points."certbot.plugins"]
standalone-nfq = "certbot_standalone_nfq.auth:Authenticator"

[tool.setuptools]
packages = ["certbot_standalone_nfq"]

[tool.setuptools.dynamic]
version = {attr = "certbot_standalone_nfq._version.__version__"}

[tool.setuptools_scm]
write_to = "certbot_standalone_nfq/_version.py"

[tool.black]
line-length = 100
target-version = ['py38']

[build-system]
requires = [
  "setuptools >= 40.9.0",
  "setuptools-scm>=7.0.5"
]
build-backend = "setuptools.build_meta"